# phono-junk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md
.claude/: settings.local.json
.claude/skills/music-scraping/: SKILL.md  tower-mdb.md
.claude/skills/phono-archive/: SKILL.md
.claude/skills/phono-archive/formats/: AccurateRip.md  DiscID.md
phono-junk-accuraterip/: Cargo.toml
phono-junk-accuraterip/src/: client.rs  crc.rs  dbar.rs  error.rs  lib.rs  url.rs  verify.rs
phono-junk-accuraterip/tests/: accuraterip_live.rs  arver_live.rs  client_mocked.rs  crc_algorithm.rs  dbar_parse.rs  url_builder.rs  verify.rs
phono-junk-amazon/: Cargo.toml
phono-junk-amazon/src/: lib.rs
phono-junk-barcodelookup/: Cargo.toml
phono-junk-barcodelookup/src/: lib.rs
phono-junk-barcodelookup/tests/: mocked.rs
phono-junk-barcodelookup/tests/fixtures/: README.md  search_barcode_hit.json
phono-junk-catalog/: Cargo.toml
phono-junk-catalog/src/: lib.rs  types.rs  yaml.rs
phono-junk-cli/: Cargo.toml
phono-junk-cli/src/: env.rs  error.rs  main.rs  output.rs
phono-junk-cli/tests/: smoke.rs
phono-junk-core/: Cargo.toml
phono-junk-core/src/: lib.rs
phono-junk-core/src/tests/: toc_tests.rs
phono-junk-db/: Cargo.toml
phono-junk-db/src/: cache.rs  crud.rs  lib.rs  overrides.rs  schema.rs
phono-junk-db/tests/: cache.rs  crud.rs  overrides.rs  schema.rs
phono-junk-discogs/: Cargo.toml
phono-junk-discogs/src/: lib.rs
phono-junk-discogs/tests/: mocked.rs
phono-junk-discogs/tests/fixtures/: README.md  search_barcode_hit.json
phono-junk-extract/: Cargo.toml
phono-junk-extract/src/: encode.rs  error.rs  lib.rs  paths.rs  tags.rs
phono-junk-extract/tests/: roundtrip.rs
phono-junk-gui/: Cargo.toml
phono-junk-gui/fonts/: LICENSE
phono-junk-gui/src/: app.rs  backend.rs  fonts.rs  lib.rs  main.rs  state.rs
phono-junk-gui/src/backend/: detail.rs  export.rs  identify.rs  identify_queue.rs  scan.rs  verify.rs  worker.rs
phono-junk-gui/src/backend/player/: decoder.rs  error.rs  mod.rs
phono-junk-gui/src/views/: album_list.rs  detail.rs  mod.rs  settings.rs
phono-junk-gui/src/widgets/: activity_bar.rs  mod.rs  status_bar.rs  table_header.rs
phono-junk-identify/: Cargo.toml
phono-junk-identify/src/: consensus.rs  fanout.rs  http.rs  lib.rs
phono-junk-identify/src/tests/: fanout_tests.rs  http_tests.rs
phono-junk-identify/tests/: aggregator.rs  consensus.rs  fanout.rs
phono-junk-itunes/: Cargo.toml
phono-junk-itunes/src/: json.rs  lib.rs
phono-junk-itunes/src/tests/: rewrite_tests.rs
phono-junk-itunes/tests/: itunes_provider.rs
phono-junk-itunes/tests/fixtures/: README.md  search_exact_hit.json
phono-junk-lib/: Cargo.toml
phono-junk-lib/src/: audit.rs  context.rs  credentials.rs  detail.rs  env.rs  extract.rs  http.rs  identify.rs  lib.rs  list.rs  scan.rs  sidecar.rs  verify.rs
phono-junk-lib/tests/: credentials_leakage.rs  extract.rs  identify.rs  sidecar.rs
phono-junk-musicbrainz/: Cargo.toml
phono-junk-musicbrainz/src/: artist_credit.rs  json.rs  lib.rs
phono-junk-musicbrainz/src/tests/: artist_credit_tests.rs
phono-junk-musicbrainz/tests/: caa_provider.rs  mb_provider.rs
phono-junk-musicbrainz/tests/fixtures/: README.md  caa_front_back_booklet.json  caa_front_only.json  discid_multi_release.json  discid_single_release.json
phono-junk-toc/: Cargo.toml
phono-junk-toc/src/: discid.rs  lib.rs  toc_from_layout.rs
phono-junk-toc/src/tests/: discid_tests.rs  toc_from_layout_tests.rs
phono-junk-toc/tests/: cue_integration.rs
phono-junk-toc/tests/fixtures/: README.md  arver_3track.cue  cd_extra_synth.cue
phono-junk-tower/: Cargo.toml
phono-junk-tower/src/: cache.rs  lib.rs  parse.rs
phono-junk-tower/src/tests/: cache_tests.rs  parse_release_tests.rs  parse_search_tests.rs
phono-junk-tower/tests/: mocked.rs
phono-junk-tower/tests/fixtures/: release-10054881.html  search-barcode-hit.html
