[package]
name = "phono-junk-barcodelookup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
phono-junk-identify.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
log.workspace = true

[dev-dependencies]
httpmock.workspace = true
