[package]
name = "phono-junk-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yml.workspace = true
chrono = { workspace = true, features = ["serde"] }
thiserror.workspace = true
