[package]
name = "phono-junk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phono-junk"
path = "src/main.rs"

[dependencies]
phono-junk-lib.workspace = true
phono-junk-core.workspace = true
phono-junk-catalog.workspace = true
phono-junk-db.workspace = true
phono-junk-toc.workspace = true
phono-junk-accuraterip.workspace = true
phono-junk-identify.workspace = true
phono-junk-extract.workspace = true
rusqlite.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
httpmock.workspace = true
rusqlite.workspace = true
