[package]
name = "phono-junk-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
phono-junk-catalog.workspace = true
junk-libs-disc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono = { workspace = true, features = ["serde"] }
log.workspace = true

[dev-dependencies]
tempfile = "3"
