[package]
name = "phono-junk-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
phono-junk-catalog.workspace = true
junk-libs-core.workspace = true
junk-libs-disc.workspace = true
log.workspace = true
thiserror.workspace = true
flac-bound = { version = "0.5", default-features = false, features = ["libflac-noogg"] }
metaflac = "0.2"

[dev-dependencies]
claxon = "0.4"
tempfile = "3"
