[package]
name = "phono-junk-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phono-junk-gui"
path = "src/main.rs"

[lib]
name = "phono_junk_gui"
path = "src/lib.rs"

[dependencies]
phono-junk-lib.workspace = true
phono-junk-core.workspace = true
phono-junk-catalog.workspace = true
phono-junk-db.workspace = true
rusqlite.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
rfd.workspace = true
log.workspace = true
env_logger.workspace = true
serde = { workspace = true, features = ["derive"] }
