[package]
name = "phono-junk-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "phono-junk-gui"
path = "src/main.rs"

[lib]
name = "phono_junk_gui"
path = "src/lib.rs"

[dependencies]
phono-junk-lib.workspace = true
phono-junk-core.workspace = true
phono-junk-catalog.workspace = true
phono-junk-db.workspace = true
junk-libs-disc.workspace = true
chrono = { workspace = true, features = ["serde"] }
rusqlite.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
# Direct dep so our codec features (jpeg/png/webp) unify with the copy
# egui_extras pulls in — without this, `install_image_loaders` registers a
# decoder pipeline with no formats and every cover fails as
# "No matching image loader format \"Jpeg\"".
image.workspace = true
rfd.workspace = true
log.workspace = true
env_logger.workspace = true
serde = { workspace = true, features = ["derive"] }
