[package]
name = "phono-junk-identify"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
reqwest.workspace = true
governor.workspace = true
nonzero_ext.workspace = true
log.workspace = true

[dev-dependencies]
httpmock.workspace = true
