[package]
name = "phono-junk-lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
phono-junk-toc.workspace = true
phono-junk-identify.workspace = true
phono-junk-musicbrainz.workspace = true
phono-junk-itunes.workspace = true
# phono-junk-discogs + phono-junk-amazon are deferred post-MVP (see TODO.md).
# They're still workspace members so they keep compiling as stubs; just not
# wired into PhonoContext yet.
phono-junk-accuraterip.workspace = true
phono-junk-catalog.workspace = true
phono-junk-db.workspace = true
phono-junk-extract.workspace = true
junk-libs-core.workspace = true
junk-libs-disc.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
log.workspace = true
thiserror.workspace = true
governor.workspace = true
nonzero_ext.workspace = true
rusqlite.workspace = true

[dev-dependencies]
url.workspace = true
tempfile = "3"
claxon = "0.4"
metaflac = "0.2"
