[package]
name = "phono-junk-musicbrainz"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
phono-junk-identify.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest.workspace = true
url.workspace = true
log.workspace = true
