[package]
name = "phono-junk-tower"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phono-junk-core.workspace = true
phono-junk-identify.workspace = true
scraper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
url.workspace = true
log.workspace = true
sha1.workspace = true

[dev-dependencies]
httpmock.workspace = true
tempfile.workspace = true
